k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
  namespace: __PROJECT_GROUP_NAMESPACE__
  labels:
    app: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
  template:
    metadata:
      labels:
        app: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
        track: stable
    spec:
      containers:
        - name: __PROJECT_NAME__
          image: __DOCKER_IMAGE__
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: myregistry
