k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
  namespace: __PROJECT_GROUP_NAMESPACE__
  labels:
    app: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: __PROJECT_NAME__-__CI_BUILD_REF_SLUG__
